--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,23 +1,17 @@
-\anonsection{Заключение}
+\anonsection{Вывод}
 
-В ходе выполнения выпускной квалификационной работы магистра были исследованы процессы обеспечения безопасности облачных сред.
+В ходе выполнения индивидуального задания была проведена двухсторонняя интеграция языков программирования Lua и C++ с использованием IDE VSCodium и кроссплатформенного инструмента сборки CMake. Разработан программный код, который демонстрирует успешную работу интеграции. В процессе работы над проектом были выполнены следующие задачи:
 
-В ходе исследования были проанализированы существующие проблемы и стандарты безопасности облачных вычислений, предложены способы решения данных проблем.
-Рассмотрена специфика предоставления облачных услуг зарубежных и отечественных поставщиков.
-Проанализированы наиболее опасные уязвимости за 2016~г.
+\begin{enumerate}
+	\item \textbf{Изучение и применение принципов интеграции Lua с C++}. Были изучены основные подходы к взаимодействию между Lua и C++ с использованием библиотеки Lua. Созданы примеры кода, демонстрирующие вызов Lua-скриптов из C++ и управление C++ объектами в Lua.
 
-В ходе системного анализа было описано системотехническое представление системы, описаны входные и выходные данные, составлен список функций системы безопасности, произведена декомпозиция системы и описана связь между ее элементами.
+	\item \textbf{Настройка рабочей среды и инструментов сборки}. Для разработки был использован редактор VSCodium, который обеспечил удобное и эффективное написание кода. Были настроены инструменты сборки CMake, что позволило автоматизировать процесс компиляции и управления зависимостями между библиотеками Lua и C++.
 
-В ходе вариантного анализа был произведен сравнительный анализ гипервизоров между тремя альтернативами, в ходе которого был выбран наиболее оптимальный вариант.
+	\item \textbf{Создание и тестирование интеграции Lua и C++}. Реализована двухсторонняя интеграция, при которой C++ может вызывать Lua-функции, а Lua может работать с C++ объектами. Это дало возможность реализовать гибкое взаимодействие между языками программирования, где C++ используется для высокой производительности и работы с системными ресурсами, а Lua -- для написания высокоуровневой логики работы приложения.
 
-В ходе экспериментальных исследования была эксплуатирована уязвимость CVE-2016-5195, благодаря которой локальный пользователь сервера получил доступ к правам суперпользователя.
-Скрипт не является законченным продуктом и распространяется под свободной лицензией.
+	\item \textbf{Защита и обоснование применения}. Для защиты отчета был подготовлен доклад, обосновывающий необходимость двухсторонней интеграции Lua и C++ в разработке программного обеспечения, а также ее применение в реальных задачах, требующих гибкости в программировании и высокой производительности.
+\end{enumerate}
 
-Для мониторинга уязвимостей в программном обеспечении облачной среды был разработан скрипт на языке программирования Python.
-Скрипт осуществляет поиск по открытой базе уязвимостей согласно установленным параметрам.
-Программа находится в открытом доступе и распространяется под открытой лицензией.
-
-Практическая значимость исследования состоит в возможности применения написанной программы в облачной среде провайдеров для анализа уязвимостей и незамедлительного реагирования на них.
-Также разработана защищенная облачная инфраструктура, описаны стратегии расширения инфраструктуры.
+Результаты выполнения задания продемонстрировали успешное использование двух языков программирования для решения задач, требующих как гибкости скриптов, так и производительности системного программирования.
 
 \clearpage
