--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -1,21 +1,19 @@
 \anonsection{Введение}
 
-Облачные услуги --- это способ предоставления, потребления и управления технологией.
-Данный тип услуг выводит гибкость и эффективность на новый уровень, путем эволюции способов управления, таких как непрерывность, безопасность, резервирование и самообслуживание, которые соединяют физическую и виртуальную среду.
+Производственная практика (проектная) направлена на приобретение навыков и опыта самостоятельного решения практических задач, закрепление и углубление теоретической подготовки обучающегося, а также развитие практических навыков и компетенций, необходимых для работы с современными языками программирования и инструментами разработки.
 
-Для эффективной работы облачной инфраструктуры требуется эффективная структура и организация.
-Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в подобной инфраструктуре.
-Данная выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные сервера и сервисы для поддержки центра обработки данных (\hyperlink{dc}{ЦОД}).
+Актуальность данной работы обусловлена растущей потребностью в эффективной интеграции различных языков программирования в условиях стремительного развития технологий. Одной из таких актуальных задач является интеграция языков C++ и Lua, что позволяет создавать мощные и гибкие решения для различных областей применения. Возможность взаимодействия C++ и Lua предоставляет разработчикам инструменты для расширения функциональности приложений, их оптимизации и упрощения разработки за счет использования скриптовых возможностей Lua.
 
-Развитие информационного мира движется в сторону повсеместного распространения облачных вычислений, их технологий и сервисов.
-Очевидные преимущества данного подхода \cite{telecom-world}:
+Целью данной практики является изучение механизмов интеграции языков программирования C++ и Lua в среде операционной системы Linux, а также разработка инструмента, который будет осуществлять конвертацию Lua-скриптов в файлы исходного кода C++.
+
+Задачами производственной (проектной) практики являются:
 \begin{itemize}
-  \item снижение затрат --- отсутствие необходимости покупки собственного оборудования, программного обеспечения (\hyperlink{soft}{ПО}), работы системного инженера;
-  \item удаленный доступ --- возможность доступа к данным облака из любой точки мира, где есть доступ в глобальную сеть Интернет;
-  \item отказоустойчивость и масштабируемость --- изменение необходимых ресурсов в зависимости от потребностей проекта, техническое обслуживание оборудования лежит на плечах облачного провайдера.
+	\item изучение литературы по интеграции C++ и Lua, а также технологий, используемых для этой цели;
+	\item разработка вспомогательного инструмента для конвертации Lua-скриптов в C++-код;
+	\item выполнение двухсторонней интеграции Lua и C++ с использованием IDE VSCodium и системы сборки CMake;
+	\item разработка программного кода, демонстрирующего успешную интеграцию и взаимодействие двух языков.
 \end{itemize}
 
-В связи с этим можно сделать вывод, что основные недостатки облачных вычислений сводятся к информационной безопасности.
-Такого мнения придерживаются многие крупные информационные компании, что в некоторой степени препятствует более стремительному развитию рынка облачных сервисов.
+Данная работа способствует закреплению теоретических знаний и навыков проектирования информационных процессов, а также приобретению практического опыта в области программирования и интеграции современных технологий.
 
 \clearpage
