--- a/main.tex
+++ b/main.tex
@@ -9,45 +9,22 @@
 %%% Начало документа
 \begin{document}
 
-% 1 страница
-% \includepdf{extra/pz} % Пояснительная записка
+\includepdf[pages={1}]{extra/Отчет_титул.pdf}
 
-% 2 страница (не нумеруется, но учитывается)
-% \includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
-
-% Помимо ПЗ и задания, в ВКР также вкладываются:
-% * отзыв руководителя (otzyv.pdf), на 1 странице с двух сторон
-% * рецензия (review.pdf), на 1 странице с двух сторон
-% * отчет по антиплагиату (antiplagiat.pdf)
-
-% 3 страница
-\input{inc/0-annotation} % Аннотация
-
+\setcounter{page}{2}
 \tableofcontents % Содержание 
 \clearpage
 
-\input{inc/0-intro}        % Введение
-\input{inc/1-pz}           % Постановка задачи
-\input{inc/2-literature}   % Обзор литературных источников
-\input{inc/3-sysanalyz}    % Системный анализ
-\input{inc/4-varanalyz}    % Вариантный анализ
-\input{inc/5-description}  % Описание системы информационной безопасности облачной среды
-\input{inc/6-experiment}   % Экспериментальные исследования
-\input{inc/7-results}      % Анализ полученных результатов
-\input{inc/0-conclusion}   % Заключение
-\input{inc/0-glossary}     % Перечень сокращений и условных обозначений
-\input{inc/0-bibliography} % Библиографический список
-
-% Список иллюстративного материала
-\lof
-\clearpage
-
-% Список табличного материала
-\lot
-\clearpage
-
-% Приложения
-\input{inc/a-app} % Программа мониторинга уязвимостей в программном обеспечении
+\input{inc/0-intro}
+\input{inc/1-it}
+\input{inc/2-literature}
+\input{inc/3-helper}
+\input{inc/4-proj}
+\input{inc/5-the-app}
+\input{inc/6-test}
+\input{inc/7-test2}
+\input{inc/0-conclusion}
+\input{inc/0-bibliography}
+\input{inc/0-app}
 
 \end{document}
-%%% Конец документа
