feat: lstlisting caption format

--- a/preamble.tex
+++ b/preamble.tex
@@ -8,47 +8,62 @@
 \usepackage{xcolor}
 \usepackage{listings} % Оформление исходного кода
 \lstset{
-    basicstyle=\small\ttfamily, % Размер и тип шрифта
-    breaklines=true,            % Перенос строк
-    tabsize=2,                  % Размер табуляции
-    frame=single,               % Рамка
-    literate={--}{{-{}-}}2,     % Корректно отображать двойной дефис
-    literate={---}{{-{}-{}-}}3  % Корректно отображать тройной дефис
+basicstyle=\small\ttfamily, % Размер и тип шрифта
+breaklines=true,            % Перенос строк
+tabsize=2,                  % Размер табуляции
+frame=single,               % Рамка
+literate={--}{{-{}-}}2,     % Корректно отображать двойной дефис
+literate={---}{{-{}-{}-}}3,  % Корректно отображать тройной дефис
+literate=
+	{а}{{\cyra}}1 {б}{{\cyrb}}1 {в}{{\cyrv}}1 {г}{{\cyrg}}1 {д}{{\cyrd}}1
+{е}{{\cyre}}1 {ё}{{\cyryo}}1 {ж}{{\cyrzh}}1 {з}{{\cyrz}}1 {и}{{\cyri}}1
+{й}{{\cyrishrt}}1 {к}{{\cyrk}}1 {л}{{\cyrl}}1 {м}{{\cyrm}}1 {н}{{\cyrn}}1
+{о}{{\cyro}}1 {п}{{\cyrp}}1 {р}{{\cyrr}}1 {с}{{\cyrs}}1 {т}{{\cyrt}}1
+{у}{{\cyru}}1 {ф}{{\cyrf}}1 {х}{{\cyrh}}1 {ц}{{\cyrc}}1 {ч}{{\cyrch}}1
+{ш}{{\cyrsh}}1 {щ}{{\cyrshch}}1 {ъ}{{\cyrhrdsn}}1 {ы}{{\cyrery}}1
+{ь}{{\cyrsftsn}}1 {э}{{\cyrerev}}1 {ю}{{\cyryu}}1 {я}{{\cyrya}}1
+{А}{{\CYRA}}1 {Б}{{\CYRB}}1 {В}{{\CYRV}}1 {Г}{{\CYRG}}1 {Д}{{\CYRD}}1
+{Е}{{\CYRE}}1 {Ё}{{\CYRYO}}1 {Ж}{{\CYRZH}}1 {З}{{\CYRZ}}1 {И}{{\CYRI}}1
+{Й}{{\CYRISHRT}}1 {К}{{\CYRK}}1 {Л}{{\CYRL}}1 {М}{{\CYRM}}1 {Н}{{\CYRN}}1
+{О}{{\CYRO}}1 {П}{{\CYRP}}1 {Р}{{\CYRR}}1 {С}{{\CYRS}}1 {Т}{{\CYRT}}1
+{У}{{\CYRU}}1 {Ф}{{\CYRF}}1 {Х}{{\CYRH}}1 {Ц}{{\CYRC}}1 {Ч}{{\CYRCH}}1
+{Ш}{{\CYRSH}}1 {Щ}{{\CYRSHCH}}1 {Ъ}{{\CYRHRDSN}}1 {Ы}{{\CYRERY}}1
+{Ь}{{\CYRSFTSN}}1 {Э}{{\CYREREV}}1 {Ю}{{\CYRYU}}1 {Я}{{\CYRYA}}1
 }
 \definecolor{darkgreen}{rgb}{0,0.5,0} % Custom dark green color
 \lstdefinelanguage{TypeScript}{
-    keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, for, of, while, do, else, case, break, const, let, import, export, default, class, extends, async, await, from, interface },
-    ndkeywords={class, export, boolean, number, string, object, throw, implements, import, this, from, interface },
-    sensitive=false,
-    comment=[l]{//},
-    morecomment=[s]{/*}{*/},
-    keywordstyle=\color{blue}\bfseries,
-    ndkeywordstyle=\color{darkgray}\bfseries,
-    commentstyle=\color{darkgreen}\ttfamily,
-    stringstyle=\color{red}\ttfamily,
-    morestring=[b]', 
-    morestring=[b]"
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, for, of, while, do, else, case, break, const, let, import, export, default, class, extends, async, await, from, interface },
+	ndkeywords={class, export, boolean, number, string, object, throw, implements, import, this, from, interface },
+	sensitive=false,
+	comment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	keywordstyle=\color{blue}\bfseries,
+	ndkeywordstyle=\color{darkgray}\bfseries,
+	commentstyle=\color{darkgreen}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	morestring=[b]',
+	morestring=[b]"
 }
 % Define Vue.js language
 \lstdefinelanguage{Vue}{
-		keywords={import, export, default, from, interface },
-    morekeywords={template,script,data,methods,computed,props,watch,mounted,created,updated,destroyed,setup,ref,reactive},
-		ndkeywords={ export, boolean, import, this, from, interface },
-    sensitive=true,
-    morecomment=[l]{//},
-    morecomment=[s]{/*}{*/},
-    morecomment=[s]{<!--}{-->},
-    morestring=[b]",
-    morestring=[b]',
-    morestring=[b]`,
-		keywordstyle=\color{blue}\bfseries,
-    ndkeywordstyle=\color{darkgray}\bfseries,
-		commentstyle=\color{darkgreen}\ttfamily,
-    stringstyle=\color{red}\ttfamily,
-    tabsize=2,
-    frame=single,
-    showstringspaces=false,
-    breaklines=true
+	keywords={import, export, default, from, interface },
+	morekeywords={template,script,data,methods,computed,props,watch,mounted,created,updated,destroyed,setup,ref,reactive},
+	ndkeywords={ export, boolean, import, this, from, interface },
+	sensitive=true,
+	morecomment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	morecomment=[s]{<!--}{-->},
+	morestring=[b]",
+	morestring=[b]',
+	morestring=[b]`,
+	keywordstyle=\color{blue}\bfseries,
+	ndkeywordstyle=\color{darkgray}\bfseries,
+	commentstyle=\color{darkgreen}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	tabsize=2,
+	frame=single,
+	showstringspaces=false,
+	breaklines=true
 }
 
 % Шрифты, xelatex
@@ -83,14 +98,15 @@
 % Сбрасываем счетчик таблиц и рисунков в каждой новой главе
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
+\AtBeginDocument{\counterwithin{lstlisting}{section}}
 
 % Гиперссылки
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks, urlcolor={black}, % Все ссылки черного цвета, кликабельные
-    linkcolor={black}, citecolor={black}, filecolor={black},
-    pdfauthor={Амет Умеров},
-    pdftitle={Исследование процессов обеспечения безопасности облачных сред}
+	colorlinks, urlcolor={black}, % Все ссылки черного цвета, кликабельные
+	linkcolor={black}, citecolor={black}, filecolor={black},
+	pdfauthor={Амет Умеров},
+	pdftitle={Исследование процессов обеспечения безопасности облачных сред}
 }
 
 % Оформление библиографии и подрисуночных записей через точку
@@ -99,6 +115,7 @@
 \renewcommand*\l@section{\@dottedtocline{1}{1em}{1em}}
 \renewcommand{\thefigure}{\thesection.\arabic{figure}} % Формат рисунка секция.номер
 \renewcommand{\thetable}{\thesection.\arabic{table}}   % Формат таблицы секция.номер
+% \renewcommand{\thelstlisting}{\thesection.\arabic{lstlisting}} % Формат листинга: секция.номер
 \def\redeflsection{\def\l@section{\@dottedtocline{1}{0em}{10em}}}
 \makeatother
 
@@ -123,7 +140,7 @@
 \setlist[enumerate,itemize]{leftmargin=0pt, itemindent=2.5cm, labelsep=0.9cm} % Отступы в списках, как этого у нас хотят
 
 \makeatletter
-    \AddEnumerateCounter{\arabic}{\@arabic}{м.}
+\AddEnumerateCounter{\arabic}{\@arabic}{м.}
 \makeatother
 \setlist{nolistsep}                           % Нет отступов между пунктами списка
 \renewcommand{\labelitemi}{--}                % Маркер списка --
@@ -159,8 +176,8 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \fancypagestyle{plain}{
-    \fancyhf{}
-    \cfoot{\textrm{\thepage}}
+	\fancyhf{}
+	\cfoot{\textrm{\thepage}}
 }
 
 % Формат подрисуночных надписей
@@ -168,31 +185,39 @@
 \DeclareCaptionLabelSeparator{defffis}{ -- } % Разделитель
 \captionsetup[figure]{justification=centering, labelsep=defffis, format=plain} % Подпись рисунка по центру
 \captionsetup[table]{justification=raggedright, labelsep=defffis, format=plain, singlelinecheck=false} % Подпись таблицы слева
-\addto\captionsrussian{\renewcommand{\figurename}{Рисунок}} % Имя фигуры
+\captionsetup[lstlisting]{
+	justification=centering,
+	labelsep=defffis,
+	format=plain
+}
+\addto\captionsrussian{
+	\renewcommand{\figurename}{Рисунок}
+	\renewcommand{\lstlistingname}{Листинг}
+} % Имя фигуры
 
 % Пользовательские функции
 \newcommand{\addimg}[4]{ % Добавление одного рисунка
-    \begin{figure}
-        \centering
-        \includegraphics[width=#2\linewidth]{#1}
-        \caption{#3} \label{#4}
-    \end{figure}
+	\begin{figure}
+		\centering
+		\includegraphics[width=#2\linewidth]{#1}
+		\caption{#3} \label{#4}
+	\end{figure}
 }
 \newcommand{\addimghere}[4]{ % Добавить рисунок непосредственно в это место
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=#2\linewidth]{#1}
-        \caption{#3} \label{#4}
-    \end{figure}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#2\linewidth]{#1}
+		\caption{#3} \label{#4}
+	\end{figure}
 }
 \newcommand{\addtwoimghere}[5]{ % Вставка двух рисунков
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=#2\linewidth]{#1}
-        \hfill
-        \includegraphics[width=#3\linewidth]{#2}
-        \caption{#4} \label{#5}
-    \end{figure}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#2\linewidth]{#1}
+		\hfill
+		\includegraphics[width=#3\linewidth]{#2}
+		\caption{#4} \label{#5}
+	\end{figure}
 }
 
 % Заголовки секций в оглавлении в верхнем регистре
@@ -200,13 +225,13 @@
 \makeatletter
 \let\oldcontentsline\contentsline
 \def\contentsline#1#2{
-    \expandafter\ifx\csname l@#1\endcsname\l@section
-        \expandafter\@firstoftwo
-    \else
-        \expandafter\@secondoftwo
-    \fi
-    {\oldcontentsline{#1}{\MakeTextUppercase{#2}}}
-    {\oldcontentsline{#1}{#2}}
+\expandafter\ifx\csname l@#1\endcsname\l@section
+	\expandafter\@firstoftwo
+\else
+	\expandafter\@secondoftwo
+\fi
+{\oldcontentsline{#1}{\MakeTextUppercase{#2}}}
+{\oldcontentsline{#1}{#2}}
 }
 \makeatother
 
@@ -219,74 +244,74 @@
 
 % Секции без номеров (введение, заключение...), вместо section*{}
 \newcommand{\anonsection}[1]{
-    \phantomsection % Корректный переход по ссылкам в содержании
-    \paragraph{\centerline{{#1}}\vspace{1em}}
-    \addcontentsline{toc}{section}{#1}
+	\phantomsection % Корректный переход по ссылкам в содержании
+	\paragraph{\centerline{{#1}}\vspace{1em}}
+	\addcontentsline{toc}{section}{#1}
 }
 % Секции без номеров (введение, заключение...), вместо section*{}
 \newcommand{\anonsubsection}[1]{
-    \phantomsection % Корректный переход по ссылкам в содержании
-    \textnormal{#1}
-    \addcontentsline{toc}{subsection}{#1}
+	\phantomsection % Корректный переход по ссылкам в содержании
+	\textnormal{#1}
+	\addcontentsline{toc}{subsection}{#1}
 }
 
 % Секция для аннотации (она не включается в содержание)
 \newcommand{\annotation}[1]{
-    \paragraph{\centerline{{#1}}\vspace{1em}}
+	\paragraph{\centerline{{#1}}\vspace{1em}}
 }
 
 % Секция для списка иллюстративного материала
 \newcommand{\lof}{
-    \phantomsection
-    \listoffigures
-    \addcontentsline{toc}{section}{\listfigurename}
+	\phantomsection
+	\listoffigures
+	\addcontentsline{toc}{section}{\listfigurename}
 }
 
 % Секция для списка табличного материала
 \newcommand{\lot}{
-    \phantomsection
-    \listoftables
-    \addcontentsline{toc}{section}{\listtablename}
+	\phantomsection
+	\listoftables
+	\addcontentsline{toc}{section}{\listtablename}
 }
 
 % Создание новой нумерации для appsection (буквы A, B, C...)
 \newcounter{appsection}[subsection] % Счетчик appsection зависит от subsection
-\renewcommand{\theappsection}{\Alph{appsection}} % Буквенная нумерация
+\renewcommand{\theappsection}{\Asbuk{appsection}} % Буквенная нумерация
 
 % Форматирование для appsection
 \titleformat{\appsection}[block]{\vspace{1em}\normalsize}{}{12.5mm}{\theappsection\quad#1\vspace{1em}}
 
 % Команда для appsection
 \newcommand{\appsection}[1]{
-    \refstepcounter{appsection} % Увеличиваем счетчик
-    \phantomsection % Корректный переход по ссылкам в содержании
-    \addcontentsline{toc}{subsection}{\theappsection\quad#1} % Добавляем в содержание
-    \appsectionformat{#1} % Применяем форматирование
+	\refstepcounter{appsection} % Увеличиваем счетчик
+	\phantomsection % Корректный переход по ссылкам в содержании
+	\addcontentsline{toc}{subsection}{\theappsection\quad#1} % Добавляем в содержание
+	\appsectionformat{#1} % Применяем форматирование
 }
 
 % Форматирование appsection
 \newcommand{\appsectionformat}[1]{
-    \vspace{1em}
-    \normalsize
-    \theappsection\quad#1
-    \vspace{1em}
+	\vspace{1em}
+	\normalsize
+	\theappsection\quad#1
+	\vspace{1em}
 }
 
 % Библиография: отступы и межстрочный интервал
 \makeatletter
 \renewenvironment{thebibliography}[1]
-    {\section*{\refname}
-        \list{\@biblabel{\@arabic\c@enumiv}}
-           {\settowidth\labelwidth{\@biblabel{#1}}
-            \leftmargin\labelsep
-            \itemindent 16.7mm
-            \@openbib@code
-            \usecounter{enumiv}
-            \let\p@enumiv\@empty
-            \renewcommand\theenumiv{\@arabic\c@enumiv}
-        }
-        \setlength{\itemsep}{0pt}
-    }
+{\section*{\refname}
+	\list{\@biblabel{\@arabic\c@enumiv}}
+	{\settowidth\labelwidth{\@biblabel{#1}}
+		\leftmargin\labelsep
+		\itemindent 16.7mm
+		\@openbib@code
+		\usecounter{enumiv}
+		\let\p@enumiv\@empty
+		\renewcommand\theenumiv{\@arabic\c@enumiv}
+	}
+	\setlength{\itemsep}{0pt}
+}
 \makeatother
 
 \usepackage{lastpage} % Подсчет количества страниц
@@ -294,7 +319,7 @@
 
 % Названия ссылок рисунков
 \addto\extrasrussian{
-  \renewcommand{\figureautorefname}{Рисунок}
+	\renewcommand{\figureautorefname}{Рисунок}
 }
 \renewcommand{\figureautorefname}{Рисунок}
 % Названия ссылок листингов
